fixed rec1 overflow issue

--- a/less/recip1.less
+++ b/less/recip1.less
@@ -33,7 +33,7 @@ body h2 {
     justify-content: center;
     flex-wrap: wrap;
     margin-block: 60px;
-    overflow-y: hidden;
+    overflow-x: hidden;
 
     #desc {
         border: 3px solid black;
@@ -59,6 +59,7 @@ body h2 {
             font-family: Courier, monospace;
             font-weight: bold;
         }
+        
 
         #ingredients{
             margin-top: 20px;
